# mercury-release-control-v2

./: .gitignore  LICENSE  README.md  control-manifest.json  policy-v0.2.2.json  policy-v0.3.0.json  pyproject.toml  release-notes-v0.2.2.md  release-notes-v0.3.0.md
.github/workflows/: attest-v0.2.2.yml  attest-v0.3.0.yml  ci.yml  guardian.yml  migrate-v0.3.0.yml  publish-v0.2.2.yml  publish-v0.3.0.yml
src/mercury_release_control/: __init__.py  attestation.py  github_preflight.py  github_publication.py  guardian.py  handoff.py  hosted_collector.py  preflight.py  production_migration.py  provider_inspector.py  public_tree.py  publication.py  publish_workflow.py  release_profile.py  staging.py  surface_inspector.py  workflow.py
tests/: test_attest_workflow.py  test_attestation.py  test_github_preflight.py  test_guardian.py  test_guardian_v030_upgrade.py  test_handoff.py  test_hosted_collector.py  test_migration_workflow.py  test_preflight.py  test_production_migration.py  test_provider_inspector.py  test_public_tree.py  test_publication.py  test_publish_workflow.py  test_publish_workflow_structure.py  test_staging.py  test_surface_inspector.py  test_v022_compatibility.py  test_v030_controls.py  test_workflow.py
tests/fixtures/: public-tree-v1.json
