[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-release-control"
version = "0.2.2"
description = "Trusted release control plane for Mercury Tools"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
  "pydantic==2.13.4",
  "psycopg[binary]==3.2.10",
]

[dependency-groups]
dev = [
  "pytest>=9.0,<10",
  "pyyaml==6.0.3",
  "ruff>=0.15,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--ignore=tests/test_attest_workflow.py",
  "--ignore=tests/test_guardian.py",
  "--ignore=tests/test_migration_workflow.py",
  "--ignore=tests/test_production_migration.py",
  "--ignore=tests/test_publish_workflow_structure.py",
  "--ignore=tests/test_surface_inspector.py",
  "--ignore=tests/test_v030_controls.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "tests/test_attest_workflow.py",
  "tests/test_guardian.py",
  "tests/test_migration_workflow.py",
  "tests/test_production_migration.py",
  "tests/test_publish_workflow_structure.py",
  "tests/test_surface_inspector.py",
  "tests/test_v030_controls.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
